--- a/first.html
+++ b/first.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>first</title>
+    <style>
+
+        lin
+        
+    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Alahi</h1>
