--- a/first.html
+++ b/first.html
@@ -16,6 +16,9 @@
     <img height="100px" width="100px" src="pics/thalaiva.jpeg" alt="">
     <h1>Sydney</h1>
     <img src="pics/travel pic.jpeg" alt="">
-    <h1>Perth</h1>
+    <h1>poti</h1>
+    <audio controls src="pics/media/poti.mp3"></audio>
+    <h1>Agar tum sathe ho</h1>
+    <video height="300px" width="200px" controls src="pics/media/agar tum.mp4"></video>
 </body>
 </html>
