--- a/first.html
+++ b/first.html
@@ -20,5 +20,7 @@
     <audio controls src="pics/media/poti.mp3"></audio>
     <h1>Agar tum sathe ho</h1>
     <video height="300px" width="200px" controls src="pics/media/agar tum.mp4"></video>
+    <h1>Dusto Kokil</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/5zU1qNYR2cw?si=RZ6LzUSkF1BXRVb_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
